index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

:root {
    /* color variables */
    --primary-text-color: #565656;
    --secondary-text-color: #0458A0;
    --fill-color: #0458A0;
    --light-blue-bg: #E6EEF5;
    --light-grey-bg: #f1f1f1;
    --light-background: #ffffff;
    --btn-border: #0457a04a;

    /* spacing variables */
    --spacing-lg: 70px;
    --spacing-md: 50px;
    --spacing-sm: 30px;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Poppins', sans-serif;
    color: var(--primary-text-color);
    font-weight: 400;
    line-height: 2;
}

/* Generally used styles ------------------------- */
a {
    text-decoration: none;
    color: currentColor
}

.dim-background {
    display: none;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 5;
    background-color: rgba(25, 13, 49, 0.8);
    backdrop-filter: blur(1.5px);
}
.popup-sermon-container {
    display: none;
}
.close-popup-sermon {
    position: absolute;
    top: calc(50% - 280px);
    /* left: 90%; */
    right: calc(50% - 375px);
    transform: translate(-50%, -50%);
    z-index: 2;
    width: 30px;
    height: 30px;
    padding: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    /* background: #ff0200; */
    /* border-radius: 50%; */
    z-index: 10;
    cursor: pointer;
}
.popup-sermon {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border: none;
    border-radius: 10px;
    width: 90%;
    max-width: 750px;
    height: 80%;
    max-height: 500px;
    z-index: 10;
}

.dropdown {
    position: absolute;
    top: 40px;
    right: 0;
    background: white;
    padding: 15px;
    width: 200px;
    list-style-type: none;
    border-radius: 8px;
    box-shadow: 0 0 5px rgb(0 0 0 / 20%);
    visibility: hidden;
    transition: 0.5s ease;
}
.dropdown:hover {
    color: var(--primary-text-color);
}
.dropdown__items {
    padding: 15px;
    border-radius: 8px;
}
.dropdown__items:hover {
    color: var(--secondary-text-color);
    background-color: var(--light-blue-bg);
}
.dropdown__items--active {
    background-color: var(--light-blue-bg);
}

.btn {
    background: transparent;
    color: var(--fill-color);
    border: 2px solid var(--btn-border);
    border-radius: 8px;
    padding: 20px;
    width: 250px;
    cursor: pointer;
    font-size: 1rem;
    font-weight: 600;
    transition: 0.3s ease;
}
.btn:hover {
    background-color: var(--fill-color);
    color: white;
}
.btn:active {
    transform: scale(0.9);
}

.header-title {
    color: var(--fill-color);
    width: fit-content;
    position: relative;
}
.header-title::before {
    content: "";
    position: absolute;
    width: 70%;
    bottom: 0;
    left: 0;
    top: 0;
    height: 100%;
    border-bottom: 6px solid var(--fill-color);
    display: block;

}
/* ------------------------------------------------ */

.main-container {
    max-width: 1500px;
    position: relative;
    margin: 0 auto;
}

.nav-container {
    padding: 0 var(--spacing-lg);
    height: 70px;
    background-color: var(--light-background);
    position: sticky;
    top: 0;
    z-index: 10;
    box-shadow: 0 3px 10px rgba(26, 26, 26, 0.1);
}
.nav {
    margin: 0 auto;
    max-width: 1500px;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.nav__logo {
   display: flex;
   align-items: center;
   gap: 20px;
}
.nav__logo-img {
    width: 30px;
}
.nav__logo-text {
    font-weight: 700;
    color: var(--primary-text-color);
}

.nav-items {
    display: flex;
    align-items: center;
    gap: 20px;
    list-style-type: none;
}
.nav-items__item {
    font-size: .9rem;
    cursor: pointer;
    font-weight: 500;
}
.nav-items__item:hover, 
.nav-items__item--active {
    color: var(--fill-color);
}
.nav__menu,
.nav-items__close {
    display: none;
}
.about {
    position: relative;
}
.about:hover .dropdown {
    visibility: visible;
}


.carousel {
    background-color: var(--fill-color);
    height: 600px;
    position: relative;
    display: flex;
    overflow: hidden;
}

.carousel-slide {
    height: 100%;
    width: 100%;
    background-image: url('./assets/images/carousel-slide-1.jpeg');
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
    display: flex;
    align-items: flex-end;
}

.carousel-slide__text {
    color: white;
    font-weight: 700;
    font-size: 50px;
    margin-left: var(--spacing-lg);
    margin-bottom: var(--spacing-lg);
}

.slide-indicators {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: 20px;
}
.slide-indicators__indicator {
    display: inline-block;
    height: 15px;
    width: 15px;
    border: 1px solid white;
    border-radius: 50%;
}
.indicator-active {
    background-color: white;
}

.body-container {
    margin: 0 var(--spacing-lg);
}

.upcoming-event {
    padding: 20px;
    margin: 0 auto;
    margin-top: var(--spacing-md);
    /* margin-bottom: var(--spacing-lg); */
    margin-bottom: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
    width: fit-content;
}
.upcoming-event__title {
    margin-bottom: var(--spacing-sm);
}

.countdown {
    display: flex;
    align-items: center;
    gap: 50px;
}
:is(.countdown-days, .countdown-hours, .countdown-minutes, .countdown-seconds) {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}
.countdown-value {
    background-color: var(--light-blue-bg);
    color: var(--fill-color);
    width: 120px;
    height: 120px;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 4rem;
    font-weight: 600;
}
/* ... */

